force-app/main/default/objects/tdc_cti__IVR_Queue_User_Managment__c/fields/tdc_cti__Call_id__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_id__c</fullName>
    <description>This field is used to store unique call id of a call.</description>
    <label>Call id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>