force-app/main/default/objects/tdc_cti__IVR_Queue_User_Managment__c/fields/tdc_cti__Caller_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Caller_Id__c</fullName>
    <description>This field is used to store caller id for a call.</description>
    <label>Caller Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>