force-app/main/default/objects/tdc_cti__IVR_Queue_User_Managment__c/fields/tdc_cti__Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Previous_Status__c</fullName>
    <description>This field is used to store previous status of a CTI user.</description>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>