force-app/main/default/objects/tdc_cti__IVR_Queue_User_Managment__c/fields/tdc_cti__Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Status__c</fullName>
    <description>This field is used to store calling status of CTI user.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>