force-app/main/default/objects/tdc_cti__IVR_Queue_User_Managment__c/fields/tdc_cti__User__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store CTI user id.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IVR_Queue_User_Managments</relationshipName>
    <type>Lookup</type>
</CustomField>